# bsc_-thesis

./: README.md  a.py  config.py  cython_writer.c  cython_writer.pyx  data_loader.py  doc.md  documentation.md  main.py  pipeline.py  pyproject.toml  segmentator.py  setup_cython.py  utils.py
src/: main.py
src/ben_v2/: config.py  data.py  extra_generators.py  main.py  model.py  process.py  utils.py
